<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SerachScreen.View.SearchFragment">

    <SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ripple"
        android:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:singleSelection="true">
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_meal"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal"

            android:textSize="16sp"
            app:chipBackgroundColor="@color/white"
            app:checkedIconEnabled="true"
            android:textColor="@color/black"
            app:rippleColor="#449FE6" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_category"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:chipBackgroundColor="@color/white"
            app:checkedIconEnabled="true"
            app:rippleColor="#449FE6" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_area"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/country"
            android:textColor="@color/black"
            app:chipBackgroundColor="@color/white"
            app:checkedIconEnabled="true"
            app:rippleColor="#449FE6" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_ingredients"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            app:chipBackgroundColor="@color/white"
            app:checkedIconEnabled="true"
            android:textColor="@color/black"
            app:rippleColor="#449FE6" />


    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/chipGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>