<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainScreen.View.HomeFragment">

    <TextView
        android:id="@+id/tv_trending_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/random_meal"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_random_meal"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="50dp"
        android:layout_marginTop="15dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_trending_food">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_random_meal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_random_meal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/random_meal"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/background_login" />

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:background="#E3F4F4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_random_meal" />

            <TextView
                android:id="@+id/tv_random_meal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="@id/view"
                tools:text="Miscellaneous" />

            <TextView
                android:id="@+id/tv_random_meal_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_random_meal_title"
                tools:text="dsdjkskdhsjhdjsjhdsjkhjkdhsssssssssssssssssssssssssssssssssdsjksdjhhdjsjkdshjkhjkdsdlksjkl" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tv_category_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/cd_random_meal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"

        app:layout_constraintTop_toBottomOf="@id/tv_category_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tv_ingredients_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textSize="35sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/category_recycler_view"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_ingredients_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_ingredients_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>