<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealDetails.View.MealDetailsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_header"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="#E3F4F4"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_meal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#E3F4F4"
                    android:scaleType="fitXY"
                    tools:src="@drawable/background_login" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divide"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="60dp"
                    app:dividerColor="#00FF0000"
                    app:layout_constraintBottom_toBottomOf="@id/iv_meal"
                    app:layout_constraintTop_toTopOf="@id/iv_meal" />


                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#74000000"
                    android:backgroundTint="@android:color/transparent"
                    android:backgroundTintMode="add"
                    app:layout_constraintTop_toBottomOf="@id/divide" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="60dp"
                    android:gravity="center"
                    android:maxLines="2"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"

                    app:layout_constraintTop_toTopOf="@id/view"
                    tools:text="Miscellaneous" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="60dp"
                    android:gravity="center"
                    android:maxLines="2"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    tools:text="Miscellaneous" />

                <TextView
                    android:id="@+id/tv_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="60dp"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_category"
                    tools:text="Miscellaneous" />
                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_add_to_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_colorNormal="@color/white"
                    app:fab_icon="@drawable/favorite_outline"
                    android:clickable="true"
                    android:focusable="true"
                    app:fab_size="mini"
                    android:layout_margin="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/ingredients"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_header" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ingredient"
            tools:listitem="@layout/meal_ingredient_items" />

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/instructions"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/rv_ingredients" />

        <TextView
            android:id="@+id/tv_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/instructions" />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            app:dividerColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_instructions"/>
        <TextView
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/video_for_preparation_meal"
            app:layout_constraintTop_toBottomOf="@+id/tv_instructions"/>
        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/wv_video_link"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/video"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>